[package]
name = "will"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.2"
serde_json = "1.0"
ansi_term = "0.12"
clap_complete = "4.5.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "will"
path = "src/main.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[build-dependencies]
clap_mangen = "0.2.20"
clap_complete = "4.5.1"
clap = "4.5.2"